[package]
name = "banana-accounting-client"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.36.2", features = [
    "async-tokio",
    "escape-html",
    "serialize",
] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
